Fix layout on small screens.

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -46,7 +46,7 @@ a small {
 }
 
 .wrapper {
-  width:860px;
+  max-width:860px;
   margin:0 auto;
 }
 
